--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,18 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
 button {
   width: 65px;
-  height: 40px;
+  height: 45px;
   margin-left: 5px;
+  border-radius: 15px;
 }
 input {
-  margin-left: 75px;
+  width: 75px;
+  height: 40px;
+  margin-left: 15px;
   margin-top: 5px;
+}
+div {
+  display: inline;
+  margin-left: 15px;
+  margin-top: 25px;
 }
